# heda

./: .gitignore  Cargo.toml  config-schema.json  config.json  dev-original-config-schema.json
src/: main.rs
src/shared/: backups.rs  config.rs  datum.rs  errors.rs  json.rs  mod.rs  path.rs  schema.rs  scripts.rs
src/subcmd/: init.rs  make_config_schema.rs  migrate.rs  mod.rs  watch.rs
src/subcmd/watch/: derive.rs  plot.rs  sort.rs
