[package]
name = "heda"
version = "0.1.0-alpha"
authors = ["Maya"]
edition = "2021"
description = ""
repository = ""
license = "AGPL-3.0-or-later"
keywords = ["json", "json-schema", "cli", "data-management"]
categories = ["command-line-utilities", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.4.18", features = ["cargo"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
const_format = "0.2.32"
deno_core = "0.261.0"
fstrings = { version = "0.2.3" }
jsonschema = "0.17.1"
plotters = "0.3.5"
rhai = "1.17.1"
schemars = "0.8.16"
serde = "1.0.196"
serde_json = "1.0.113"
swc = "0.273.3"

# Note: If scope expands, features or lints could be useful